--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head><meta charset="utf-8" />
 
-<title>INTRODUCTION</title>
+<title>Milestone 1 - Groups, data, and website</title>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
@@ -13113,18 +13113,50 @@ div#notebook {
   <div tabindex="-1" id="notebook" class="border-box-sizing">
     <div class="container" id="notebook-container">
 
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input">
-<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
-<div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span> 
-</pre></div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="Milestone-1">Milestone 1<a class="anchor-link" href="#Milestone-1">&#182;</a></h2><p>Github link: <a href="https://github.com/Dungngotan99/Dungngotan99.github.io">https://github.com/Dungngotan99/Dungngotan99.github.io</a></p>
 
-    </div>
 </div>
 </div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h3 id="Possible-sources-of-data">Possible sources of data<a class="anchor-link" href="#Possible-sources-of-data">&#182;</a></h3><ol>
+<li>Boston Airbnb open data (Kaggle): <a href="https://www.kaggle.com/airbnb/boston">https://www.kaggle.com/airbnb/boston</a></li>
+<li>Washintgon Airbnb open data (data.world): <a href="https://data.world/codefordc/airbnb-washington-d-c-2015-10-03">https://data.world/codefordc/airbnb-washington-d-c-2015-10-03</a></li>
+<li>San Francisco Airbnb open data (data.world): <a href="https://data.world/ajsanne/sf-airbnb-listings">https://data.world/ajsanne/sf-airbnb-listings</a></li>
+<li>New York Airbnb open data (Kaggle): <a href="https://www.kaggle.com/dgomonov/new-york-city-airbnb-open-data">https://www.kaggle.com/dgomonov/new-york-city-airbnb-open-data</a></li>
+</ol>
 
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h3 id="Project-Plan">Project Plan<a class="anchor-link" href="#Project-Plan">&#182;</a></h3><p>Since the first time Airbnb was established in 2008, its appearance has disrupted and changed the traditional ways of hospitality and acoomodation around the world. The number of rental listings on Airbnb has expanded exponentially over the past few years. Based on the motivation to understand its explosive growth thoroughly, this project aims to extract data from websites, manipulate it, run exploratory analysis on procesed one, apply machine learning models, and finally suggest possible ideas to increase its benefits.</p>
+<h3 id="Questions">Questions<a class="anchor-link" href="#Questions">&#182;</a></h3><p>In details, the project will explore how the locations of these accomodations, ranges of time customers are likely to travel (supply and demand principle), and other reasons may affect the price, ratings, and number of listings. Furthermore, customers' reviews play an important roles in improving customer service, which may help the company run advertisement for suitable targets and connect customers or hosts with same interests. Thus, I want to explore how these reviews can be extracted and briefly identify some characteristics of customers to personalize their experiences.</p>
+<h3 id="Possible-tools">Possible tools<a class="anchor-link" href="#Possible-tools">&#182;</a></h3><p>Python libraries:</p>
+
+<pre><code>1. Data extraction and manipulation: numpy, pandas
+2. Data visualization: plotly, seaborn, ipywidgets, and matplotlib
+3. Data analysis: scipy and scikit-learn
+</code></pre>
+<p>Others:
+    Natural language processing (NLP) and logistic regression.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+
+</div>
+</div>
 </div>
     </div>
   </div>
