--- a/index.html
+++ b/index.html
@@ -13116,7 +13116,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Milestone-1">Milestone 1<a class="anchor-link" href="#Milestone-1">&#182;</a></h2><p>Github link: <a href="https://github.com/Dungngotan99/Dungngotan99.github.io">https://github.com/Dungngotan99/Dungngotan99.github.io</a></p>
+<h2 id="Milestone-1">Milestone 1<a class="anchor-link" href="#Milestone-1">&#182;</a></h2><p>Github link: <a href="https://Dungngotan99.github.io">https://Dungngotan99.github.io</a></p>
 
 </div>
 </div>
